Add scream sound.

--- a/SoundBoard WatchKit App/Base.lproj/Interface.storyboard
+++ b/SoundBoard WatchKit App/Base.lproj/Interface.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="3737"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
@@ -10,6 +10,11 @@
             <objects>
                 <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="SoundBoard_WatchKit_App" customModuleProvider="target">
                     <items>
+                        <button width="1" alignment="left" title="Scream" id="J7u-lo-M7a">
+                            <connections>
+                                <action selector="ScreamButtonTapped" destination="AgC-eL-Hgc" id="0SD-C8-aoS"/>
+                            </connections>
+                        </button>
                         <button width="1" alignment="center" title="Fart" id="WWD-EI-qwm">
                             <connections>
                                 <action selector="FartButtonTapped" destination="AgC-eL-Hgc" id="zlV-2j-Hrt"/>
